--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,15 @@ body {
     padding: 20px;
 }
 
+.date {
+    font-size: 1.2em;
+    text-align: center;
+}
+
 h1 {
     text-align: center;
     color: #e94560;
     font-size: 2.5rem;
-    margin-bottom: 30px;
 }
 
 h2 {
@@ -42,7 +46,7 @@ h2 {
     border-radius: 10px;
     font-size: 1.2rem;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     gap: 5px;
     position: relative;
