--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,13 @@ body {
 
 h1 {
     text-align: center;
-    color: #e94560;
+    color: #538146;
     font-size: 2.0rem;
 }
 
 h2 {
-    color: #e94560;
+    color: #538146;
     font-size: 1.2rem;
-    margin-bottom: 30px;
 }
 
 .album-list {
@@ -43,7 +42,7 @@ h2 {
     counter-increment: album-counter;
     background-color: #1e1e1e;
     padding: 6px 20px;
-    border-left: 5px solid #e94560;
+    border-left: 5px solid #538146;
     border-radius: 10px;
     font-size: 1.0rem;
     display: flex;
@@ -51,7 +50,7 @@ h2 {
     align-items: center;
     gap: 5px;
     position: relative;
-    padding-left: 50px;
+    padding-left: 45px;
 }
 
 .album-list li::before {
@@ -59,12 +58,12 @@ h2 {
     position: absolute;
     left: 10px;
     font-weight: bold;
-    color: #e94560;
+    color: #538146;
 }
 
 .rating {
     font-weight: bold;
-    color: #e94560;
+    color: #538146;
     margin-left: 8px;
 }
 
@@ -76,15 +75,23 @@ h2 {
 
 .rating-guide {
     background-color: #1e1e1e;
-    border-left: 5px solid #e94560;
+    border-left: 5px solid #538146;
     padding: 6px 20px;
     border-radius: 10px;
     margin-bottom: 10px;
     font-size: 1.0rem;
-    line-height: 1.6;
     color: #f0f0f0;
 }
 
 .rating-guide p {
     margin: 4px 0;
+}
+
+.icon-link {
+    display: inline-block;
+}
+
+.icon {
+    height: 1.3em;
+    vertical-align: text-top;
 }
